--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ncnn-sys/ncnn"]
 	path = ncnn
-	url = https://github.com/darkskygit/waifu2x.rs
+	url = https://github.com/danyspin97/waifu2x.rs
 	branch = ncnn
 [submodule "ncnn-sys/vulkan"]
 	path = vulkan
